Start work on file downloader for episodes Can now download a queue of episodes that have been saved in the db. Lots of error handling work left though!